--- a/avro-kafkastreams-serde/pom.xml
+++ b/avro-kafkastreams-serde/pom.xml
@@ -19,10 +19,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>software.aws.glue</groupId>
+    <groupId>software.amazon.glue</groupId>
     <artifactId>schema-registry-kafkastreams-serde</artifactId>
     <version>1.0.0</version>
     <name>AWS Glue Schema Registry Kafka Streams AVRO SerDe</name>
+    <description>The AWS Glue Schema Registry Kafka Streams SerDe library enables Java developers to easily integrate
+        their Apache Kafka Streams applications with AWS Glue Schema Registry
+    </description>
+    <url>https://aws.amazon.com/glue</url>
     <packaging>jar</packaging>
 
     <developers>
@@ -35,16 +39,23 @@
             </roles>
         </developer>
     </developers>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
             <version>1.0.0</version>
         </dependency>
 
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
             <version>1.0.0</version>
             <classifier>tests</classifier>
@@ -139,6 +150,10 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
