--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -19,10 +19,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>software.aws.glue</groupId>
+    <groupId>software.amazon.glue</groupId>
     <artifactId>schema-registry-build-tools</artifactId>
     <version>1.0.0</version>
     <name>AWS Glue Schema Registry Build Tools</name>
+    <description>The AWS Glue Schema Registry build tools helps run code coverage for AWS Glue Schema Registry Library
+    </description>
+    <url>https://aws.amazon.com/glue</url>
 
     <developers>
         <developer>
@@ -34,6 +37,13 @@
             </roles>
         </developer>
     </developers>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <build>
         <plugins>
@@ -55,22 +65,22 @@
 
     <dependencies>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-common</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-kafkastreams-serde</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-flink-serde</artifactId>
             <version>1.0.0</version>
         </dependency>
