--- a/.github/workflows/MavenCI.yml
+++ b/.github/workflows/MavenCI.yml
@@ -19,8 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        # TODO: Add java version 9,11,13 after successful test
-        java-version: ['8']
+        java-version: ['8', '9', '11', '13']
 
     steps:
     - uses: actions/checkout@v2
