--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>software.aws.glue</groupId>
+    <groupId>software.amazon.glue</groupId>
     <artifactId>schema-registry-parent</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>AWS Glue Schema Registry Library</name>
+    <description>The AWS Glue Schema Registry Library for Java enables Java developers to easily integrate their
+        data streaming systems with AWS Glue Schema Registry
+    </description>
+    <url>https://aws.amazon.com/glue</url>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <developers>
         <developer>
             <id>amazonwebservices</id>
@@ -35,6 +46,11 @@
             </roles>
         </developer>
     </developers>
+    <scm>
+        <connection>scm:git:https://github.com/aws/aws-glue-schema-registry.git</connection>
+        <developerConnection>scm:git:git@github.com:aws/aws-glue-schema-registry.git</developerConnection>
+        <url>https://github.com/awslabs/aws-glue-schema-registry.git</url>
+    </scm>
 
     <modules>
         <module>build-tools</module>
@@ -47,9 +63,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>software.amazon.awssdk.services.glue</groupId>
-            <artifactId>AwsJavaSdk-Glue</artifactId>
-            <version>2.0</version>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>glue</artifactId>
+            <version>2.15.32</version>
         </dependency>
 
         <dependency>
@@ -62,20 +78,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>aws-json-protocol</artifactId>
-            <version>2.13.42</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>2.4.1</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams -->
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>2.4.1</version>
+            <version>2.15.30</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.avro/avro -->
@@ -197,7 +200,7 @@
                 <version>3.1.1</version>
                 <dependencies>
                     <dependency>
-                        <groupId>software.aws.glue</groupId>
+                        <groupId>software.amazon.glue</groupId>
                         <artifactId>schema-registry-build-tools</artifactId>
                         <version>1.0.0</version>
                     </dependency>
@@ -220,6 +223,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
