--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -191,7 +191,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
+                    <show>public</show>
+                    <bottom><![CDATA[Copyright &#169; 2019 Amazon Web Services, Inc. All Rights Reserved.]]></bottom>
                 </configuration>
                 <executions>
                     <execution>
