Fix maven javadoc build failures on java 13

--- a/avro-kafkaconnect-converter/pom.xml
+++ b/avro-kafkaconnect-converter/pom.xml
@@ -190,6 +190,7 @@
                     <bottom><![CDATA[Copyright &#169; 2019 Amazon Web Services, Inc. All Rights Reserved.]]></bottom>
                     <excludePackageNames>*.avrodata</excludePackageNames>
                     <maxmemory>1024m</maxmemory>
+                    <source>8</source>
                 </configuration>
                 <executions>
                     <execution>
