--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <module>avro-kafkastreams-serde</module>
         <module>avro-kafkaconnect-converter</module>
         <module>avro-flink-serde</module>
+        <module>examples</module>
     </modules>
 
     <dependencies>
