--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-kafkastreams-serde</artifactId>
-            <version>1.0.0</version>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
