--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -142,12 +142,7 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_2.11</artifactId>
             <version>1.11.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.11</artifactId>
-            <version>1.11.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
