Update schema naming strategy to allow key and value based namings

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -213,6 +213,7 @@
                         <!-- Ignore exception classes -->
                         <exclude>**/AWSIncompatibleDataException*</exclude>
                         <exclude>**/AWSSchemaRegistryException*</exclude>
+                        <exclude>**/AWSSchemaNamingStrategy*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
