--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -145,6 +145,10 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
