--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -78,8 +78,8 @@
             <artifactId>mbknor-jackson-jsonschema_2.12</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.everit-org.json-schema</groupId>
-            <artifactId>org.everit.json.schema</artifactId>
+            <groupId>com.github.erosb</groupId>
+            <artifactId>everit-json-schema</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
