Add tests to include key and value schemas both

--- a/integration-tests/kafka-connect-avro-configs/file-sink-standalone.properties
+++ b/integration-tests/kafka-connect-avro-configs/file-sink-standalone.properties
@@ -3,14 +3,20 @@ connector.class=FileStreamSink
 tasks.max=1
 topics=gsr.connect.avro.test.fruits
 file=sink-file.txt
-key.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter.schemas.enable=false
-value.converter=com.amazonaws.services.schemaregistry.kafkaconnect.AWSKafkaAvroConverter
-value.converter.schemas.enable=true
 internal.value.converter=org.apache.kafka.connect.json.JsonConverter
 internal.value.converter.schemas.enable=true
 # Converter-specific settings can be passed in by prefixing the Converter's setting
 # with the converter we want to apply it to
-value.converter.endpoint=https://glue-gamma.us-east-1.amazonaws.com
+key.converter=com.amazonaws.services.schemaregistry.kafkaconnect.AWSKafkaAvroConverter
+key.converter.schemas.enable=false
+key.converter.endpoint=https://glue.us-east-1.amazonaws.com
+key.converter.region=us-east-1
+key.converter.avroRecordType=GENERIC_RECORD
+key.converter.schemaName=KeySchemaAvro
+
+value.converter=com.amazonaws.services.schemaregistry.kafkaconnect.AWSKafkaAvroConverter
+value.converter.schemas.enable=true
+value.converter.endpoint=https://glue.us-east-1.amazonaws.com
 value.converter.region=us-east-1
 value.converter.avroRecordType=GENERIC_RECORD
+value.converter.schemaName=ValueSchemaAvro
