--- a/integration-tests/kafka-connect-avro-configs/mongo-source-standalone.properties
+++ b/integration-tests/kafka-connect-avro-configs/mongo-source-standalone.properties
@@ -9,7 +9,7 @@ topic.prefix=gsr.connect.avro
 poll.max.batch.size=1000
 poll.await.time.ms=5000
 output.format.value=schema
-output.format.key=json
+output.format.key=schema
 output.schema.infer.value=true
 publish.full.document.only=true
 copy.existing=true
