--- a/integration-tests/kafka-connect-avro-configs/worker.properties
+++ b/integration-tests/kafka-connect-avro-configs/worker.properties
@@ -1,6 +1,5 @@
 bootstrap.servers=127.0.0.1:9092
-key.converter=org.apache.kafka.connect.storage.StringConverter
-key.converter.schemas.enable=false
+
 internal.key.converter=org.apache.kafka.connect.json.JsonConverter
 internal.key.converter.schemas.enable=false
 internal.value.converter=org.apache.kafka.connect.json.JsonConverter
@@ -11,12 +10,20 @@ offset.storage.file.filename=standalone.offsets
 offset.flush.interval.ms=10000
 poll.interval.ms=5000
 # Glue Schema Registry Specific Converters
+key.converter=com.amazonaws.services.schemaregistry.kafkaconnect.AWSKafkaAvroConverter
+key.converter.schemas.enable=false
 value.converter=com.amazonaws.services.schemaregistry.kafkaconnect.AWSKafkaAvroConverter
 value.converter.schemas.enable=true
 
 # Converter-specific settings can be passed in by prefixing the Converter's setting
 # with the converter we want to apply it to
-value.converter.endpoint=https://glue-gamma.us-east-1.amazonaws.com
+key.converter.endpoint=https://glue.us-east-1.amazonaws.com
+key.converter.region=us-east-1
+key.converter.schemaAutoRegistrationEnabled=true
+key.converter.avroRecordType=GENERIC_RECORD
+key.converter.schemaName=KeySchemaAvro
+value.converter.endpoint=https://glue.us-east-1.amazonaws.com
 value.converter.region=us-east-1
 value.converter.schemaAutoRegistrationEnabled=true
 value.converter.avroRecordType=GENERIC_RECORD
+value.converter.schemaName=ValueSchemaAvro
