--- a/integration-tests/kafka-connect-json-configs/file-sink-standalone.properties
+++ b/integration-tests/kafka-connect-json-configs/file-sink-standalone.properties
@@ -3,15 +3,23 @@ connector.class=FileStreamSink
 tasks.max=1
 topics=gsr.connect.json.test.fruits
 file=sink-file.txt
-key.converter=org.apache.kafka.connect.json.JsonConverter
+key.converter=com.amazonaws.services.schemaregistry.kafkaconnect.jsonschema.JsonSchemaConverter
 key.converter.schemas.enable=false
 value.converter=com.amazonaws.services.schemaregistry.kafkaconnect.jsonschema.JsonSchemaConverter
 value.converter.schemas.enable=true
 internal.value.converter=org.apache.kafka.connect.json.JsonConverter
 internal.value.converter.schemas.enable=true
+
 # Converter-specific settings can be passed in by prefixing the Converter's setting
 # with the converter we want to apply it to
-value.converter.endpoint=https://glue-gamma.us-east-1.amazonaws.com
+key.converter.endpoint=https://glue.us-east-1.amazonaws.com
+key.converter.region=us-east-1
+key.converter.avroRecordType=GENERIC_RECORD
+key.converter.dataFormat=JSON
+key.converter.schemaName=KeySchemaJSON
+
+value.converter.endpoint=https://glue.us-east-1.amazonaws.com
 value.converter.region=us-east-1
 value.converter.avroRecordType=GENERIC_RECORD
 value.converter.dataFormat=JSON
+value.converter.schemaName=ValueSchemaJSON
