Patch Apicurio protobuf-schema-utilities for json_name bug fix

--- a/pom.xml
+++ b/pom.xml
@@ -402,6 +402,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <excludes>**/apicurio/**</excludes>
                     <suppressionsFileExpression>checkstyle.suppression.filter</suppressionsFileExpression>
                     <configLocation>${user.dir}/build-tools/src/main/resources/checkstyle.xml
                     </configLocation>
