--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -101,11 +101,44 @@
             <artifactId>wire-schema</artifactId>
             <version>${square-wireschema.version}</version>
         </dependency>
+
+<!--        TODO: clean up the dependency once Apicurio releases the latest version with the json_name fix -->
+<!--        <dependency>-->
+<!--            <groupId>io.apicurio</groupId>-->
+<!--            <artifactId>apicurio-registry-protobuf-schema-utilities</artifactId>-->
+<!--            <version>${apicurio-registry.version}</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.google.api.grpc/proto-google-common-protos -->
         <dependency>
-            <groupId>io.apicurio</groupId>
-            <artifactId>apicurio-registry-protobuf-schema-utilities</artifactId>
-            <version>${apicurio-registry.version}</version>
+            <groupId>com.squareup.wire</groupId>
+            <artifactId>wire-compiler</artifactId>
+            <version>${square-wireschema.version}</version>
+            <!-- Excluding as the latest version is not present and this is not required -->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.squareup.wire</groupId>
+                    <artifactId>wire-grpc-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.api.grpc</groupId>
+            <artifactId>proto-google-common-protos</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <!-- Used for Proto assertions in tests -->
+        <dependency>
+            <groupId>com.google.truth.extensions</groupId>
+            <artifactId>truth-proto-extension</artifactId>
+            <scope>test</scope>
+            <version>1.1.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
