--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -216,6 +216,7 @@
                         <id>gencode</id>
                         <phase>generate-sources</phase>
                         <goals>
+                            <goal>compile</goal>
                             <goal>test-compile</goal>
                         </goals>
                         <configuration>
